[grid] Replace Guava set and maps with Java equivalent for remaining Grid packages